--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
   - "node_modules"
 # Build website
 script: npm run build
+# Deploy pull requests to surge
+after_success: bash travis/surge.sh ./build
 # Deploy master to gh-pages branch
 deploy:
   edge:
