--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
   "scripts": {
   },
   "env": {
-    "NODE_ENV": "development"
+    "NODE_ENV": "development",
+    "NOW": "true"
   },
   "formation": {
   },
